[fix] change font-size from 1rem to 2rem for navigation items on mobile

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -60,7 +60,7 @@ a {
 
 @media (max-width: 360px) {
     .navigation-item {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 }
 
